--- a/templates/pjsip.conf.j2
+++ b/templates/pjsip.conf.j2
@@ -5,6 +5,7 @@ bind=0.0.0.0:5060
 external_media_address={{ external_ip | default('192.168.33.10') }}
 external_signaling_address={{ external_ip | default('192.168.33.10') }}
 local_net={{ local_net | default('192.168.33.0/24') }}
+local_net=10.0.2.0/24
 
 [transport-tcp]
 type=transport
@@ -13,6 +14,7 @@ bind=0.0.0.0:5060
 external_media_address={{ external_ip | default('192.168.33.10') }}
 external_signaling_address={{ external_ip | default('192.168.33.10') }}
 local_net={{ local_net | default('192.168.33.0/24') }}
+local_net=10.0.2.0/24
 
 [1001]
 type=endpoint
@@ -25,6 +27,8 @@ media_encryption=sdes
 media_encryption_optimistic=yes
 dtmf_mode=rfc4733
 use_avpf=no
+transport=transport-tcp
+force_rport=yes  # Move force_rport to endpoint if NAT is needed
 
 [1001]
 type=aor
@@ -34,4 +38,4 @@ max_contacts=1
 type=auth
 auth_type=userpass
 username=1001
-password={{ sip_secret | default('your_secure_password') }}
+password={{ sip_secret | default('mysecret123') }}
